# HyperbolicBO---Ultrametric-Bayesian-Optimization

./: .coverage  README.md  nasbench201_results.json  pyproject.toml
examples/: automl_optimization.py  benchmark.py  benchmark_nasbench201.py  visualize_embedding.py
src/hyperbolicbo/: __init__.py
src/hyperbolicbo/acquisition/: __init__.py  ei.py  thompson.py
src/hyperbolicbo/api/: routes.py  schemas.py
src/hyperbolicbo/benchmarks/: __init__.py
src/hyperbolicbo/embeddings/: __init__.py  pipeline_encoder.py
src/hyperbolicbo/geometry/: __init__.py  horosphere.py  poincare.py
src/hyperbolicbo/gp/: __init__.py  hyperbolic_gp.py  kernels.py
src/hyperbolicbo/optimizer/: __init__.py  hbo.py
tests/: test_gp.py  test_optimizer.py  test_poincare.py
