[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperbolicbo"
version = "0.1.0"
description = "Ultrametric Bayesian Optimization using Poincaré ball geometry for tree-structured search spaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Manikya Rathna" }
]
keywords = [
    "bayesian-optimization",
    "hyperbolic-geometry",
    "neural-architecture-search",
    "automl",
    "poincare-ball"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core hyperbolic geometry
    "geoopt>=0.5.0",
    "torch>=2.0",
    
    # Gaussian Process
    "gpytorch>=1.11",
    
    # API
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    
    # Experiment tracking
    "mlflow>=2.10",
    
    # Graph embeddings
    "node2vec>=0.4",
    "networkx>=3.2",
    
    # Numerical
    "numpy>=1.26",
    "scipy>=1.12",
    
    # Visualization
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1.9",
    "pre-commit>=3.6",
    "httpx>=0.26",  # For async API testing
]

benchmark = [
    "nasbench201",  # NAS benchmark
    "openml>=0.14",
]

[project.scripts]
hyperbolicbo = "hyperbolicbo.cli:main"

[project.urls]
Homepage = "https://github.com/manikyarathna/hyperbolicbo"
Documentation = "https://hyperbolicbo.readthedocs.io"
Repository = "https://github.com/manikyarathna/hyperbolicbo"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperbolicbo"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=hyperbolicbo --cov-report=term-missing"

[tool.coverage.run]
source = ["src/hyperbolicbo"]
